Color corrections for readability

--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 .header {
-    background: rgba(109, 109, 109, 0.8);
+    background: #757575;
     padding: 15px 10px;
     z-index: 100;
     color: #FFF;
@@ -36,7 +36,6 @@ h1, h2, h3, h4, h5, h6 {
 .content {
     padding: 30px;
 }
-
 @media only screen and (max-width: 320px) {
     h1, h2, h3, h4, h5, h6 {
         font-family: 'Open Sans', sans-serif;
